Add deploy step again

--- a/CI/task-deploy.yml
+++ b/CI/task-deploy.yml
@@ -28,3 +28,4 @@ run: # Gradle release + version bumping
     ./gradlew -PbumpComponent=patch
     ./gradlew printVersion
     git status
+    git push
